--- a/client/styles/Home.module.css
+++ b/client/styles/Home.module.css
@@ -166,3 +166,12 @@ a.secondary {
     filter: invert();
   }
 }
+
+.gameContainer {
+  width: 100%;
+  height: 100vh;
+  position: relative;
+  overflow: hidden;
+  padding: 0;
+  margin: 0;
+}
