--- a/client/styles/globals.css
+++ b/client/styles/globals.css
@@ -12,8 +12,12 @@
 
 html,
 body {
+  margin: 0;
+  padding: 0;
+  height: 100%;
+  width: 100%;
+  overflow: hidden;
   max-width: 100vw;
-  overflow-x: hidden;
 }
 
 body {
